--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "@types/node": "^16.11.29",
     "@types/react": "^18.0.7",
     "@types/react-dom": "^18.0.0",
+    "node-sass": "^7.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.6.3",
-    "web-vitals": "^2.1.4"
+    "styled-components": "^5.3.5",
+    "typescript": "^4.6.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -26,7 +27,15 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "import/no-anonymous-default-export": ["error", {
+        "allowObject": true,
+        "allowArray": true,
+        "allowArrowFunction": true,
+        "allowAnonymousFunction": true
+      }]
+    }
   },
   "browserslist": {
     "production": [
@@ -39,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.25"
   }
 }
