--- a/package.json
+++ b/package.json
@@ -3,13 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.1.1",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.4.1",
-    "@types/node": "^16.11.29",
-    "@types/react": "^18.0.7",
-    "@types/react-dom": "^18.0.0",
     "node-sass": "^7.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -29,12 +22,15 @@
       "react-app/jest"
     ],
     "rules": {
-      "import/no-anonymous-default-export": ["error", {
-        "allowObject": true,
-        "allowArray": true,
-        "allowArrowFunction": true,
-        "allowAnonymousFunction": true
-      }]
+      "import/no-anonymous-default-export": [
+        "error",
+        {
+          "allowObject": true,
+          "allowArray": true,
+          "allowArrowFunction": true,
+          "allowAnonymousFunction": true
+        }
+      ]
     }
   },
   "browserslist": {
@@ -50,6 +46,13 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.1.1",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^16.11.29",
+    "@types/react": "^18.0.7",
+    "@types/react-dom": "^18.0.0",
     "@types/styled-components": "^5.1.25"
   }
 }
