--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "node-sass": "^7.0.1",
+    "phosphor-react": "^1.4.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
@@ -15,23 +16,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ],
-    "rules": {
-      "import/no-anonymous-default-export": [
-        "error",
-        {
-          "allowObject": true,
-          "allowArray": true,
-          "allowArrowFunction": true,
-          "allowAnonymousFunction": true
-        }
-      ]
-    }
   },
   "browserslist": {
     "production": [
